cython/cmupen64plus.pxd

cdef extern from "mupen64plus_core.h":

    #ctypedef void * m64p_dynlib_handle;
    #ctypedef void * m64p_handle;
    #ctypedef void (*m64p_function)();

    #ctypedef void (*m64p_frame_callback)(unsigned int FrameIndex);
    #ctypedef void (*m64p_input_callback)();
    #ctypedef void (*m64p_audio_callback)();
    #ctypedef void (*m64p_vi_callback)();

    #ctypedef enum m64p_type:
    #    M64TYPE_INT = 1,
    #    M64TYPE_FLOAT,
    #    M64TYPE_BOOL,
    #    M64TYPE_STRING

    #ctypedef enum m64p_msg_level:
    #    M64MSG_ERROR = 1,
    #    M64MSG_WARNING,
    #    M64MSG_INFO,
    #    M64MSG_STATUS,
    #    M64MSG_VERBOSE

    ctypedef enum m64p_error:
        M64ERR_SUCCESS = 0,
        M64ERR_NOT_INIT,
        M64ERR_ALREADY_INIT,
        M64ERR_INCOMPATIBLE,
        M64ERR_INPUT_ASSERT,
        M64ERR_INPUT_INVALID,
        M64ERR_INPUT_NOT_FOUND,
        M64ERR_NO_MEMORY,
        M64ERR_FILES,
        M64ERR_INTERNAL,
        M64ERR_INVALID_STATE,
        M64ERR_PLUGIN_FAIL,
        M64ERR_SYSTEM_FAIL,
        M64ERR_UNSUPPORTED,
        M64ERR_WRONG_TYPE

    ctypedef enum m64p_core_caps:
        M64CAPS_DYNAREC = 1,
        M64CAPS_DEBUGGER = 2,
        M64CAPS_CORE_COMPARE = 4

    ctypedef enum m64p_plugin_type:
        M64PLUGIN_NULL = 0,
        M64PLUGIN_RSP = 1,
        M64PLUGIN_GFX,
        M64PLUGIN_AUDIO,
        M64PLUGIN_INPUT,
        M64PLUGIN_CORE

    #ctypedef enum m64p_emu_state:
    #    M64EMU_STOPPED = 1,
    #    M64EMU_RUNNING,
    #    M64EMU_PAUSED

    #ctypedef enum m64p_video_mode:
    #    M64VIDEO_NONE = 1,
    #    M64VIDEO_WINDOWED,
    #    M64VIDEO_FULLSCREEN

    #ctypedef enum m64p_video_flags:
    #    M64VIDEOFLAG_SUPPORT_RESIZING = 1

    #ctypedef enum m64p_core_param:
    #    M64CORE_EMU_STATE = 1,
    #    M64CORE_VIDEO_MODE,
    #    M64CORE_SAVESTATE_SLOT,
    #    M64CORE_SPEED_FACTOR,
    #    M64CORE_SPEED_LIMITER,
    #    M64CORE_VIDEO_SIZE,
    #    M64CORE_AUDIO_VOLUME,
    #    M64CORE_AUDIO_MUTE,
    #    M64CORE_INPUT_GAMESHARK,
    #    M64CORE_STATE_LOADCOMPLETE,
    #    M64CORE_STATE_SAVECOMPLETE

    #ctypedef enum m64p_command:
    #    M64CMD_NOP = 0,
    #    M64CMD_ROM_OPEN,
    #    M64CMD_ROM_CLOSE,
    #    M64CMD_ROM_GET_HEADER,
    #    M64CMD_ROM_GET_SETTINGS,
    #    M64CMD_EXECUTE,
    #    M64CMD_STOP,
    #    M64CMD_PAUSE,
    #    M64CMD_RESUME,
    #    M64CMD_CORE_STATE_QUERY,
    #    M64CMD_STATE_LOAD,
    #    M64CMD_STATE_SAVE,
    #    M64CMD_STATE_SET_SLOT,
    #    M64CMD_SEND_SDL_KEYDOWN,
    #    M64CMD_SEND_SDL_KEYUP,
    #    M64CMD_SET_FRAME_CALLBACK,
    #    M64CMD_TAKE_NEXT_SCREENSHOT,
    #    M64CMD_CORE_STATE_SET,
    #    M64CMD_READ_SCREEN,
    #    M64CMD_RESET,
    #    M64CMD_ADVANCE_FRAME,
    #    M64CMD_SET_MEDIA_LOADER

    #ctypedef struct m64p_cheat_code:
    #    uint32_t address;
    #    int value;

    #ctypedef struct m64p_media_loader:
    #    void* cb_data;
    #    char* (*get_gb_cart_rom)(void* cb_data, int controller_num);
    #    char* (*get_gb_cart_ram)(void* cb_data, int controller_num);
    #    char* (*get_dd_rom)(void* cb_data);
    #    char* (*get_dd_disk)(void* cb_data);

    #ctypedef enum m64p_system_type:
    #    SYSTEM_NTSC = 0,
    #    SYSTEM_PAL,
    #    SYSTEM_MPAL

    #ctypedef struct m64p_rom_header:
    #    uint8_t init_PI_BSB_DOM1_LAT_REG;
    #    uint8_t init_PI_BSB_DOM1_PGS_REG;
    #    uint8_t init_PI_BSB_DOM1_PWD_REG;
    #    uint8_t init_PI_BSB_DOM1_PGS_REG2;
    #    uint32_t ClockRate;
    #    uint32_t PC;
    #    uint32_t Release;
    #    uint32_t CRC1;
    #    uint32_t CRC2;
    #    uint32_t Unknown[2];
    #    uint8_t Name[20];
    #    uint32_t unknown;
    #    uint32_t Manufacturer_ID;
    #    uint16_t Cartridge_ID;
    #    uint16_t Country_code;

    #ctypedef struct m64p_rom_settings:
    #    char goodname[256];
    #    char MD5[33];
    #    unsigned char savetype;
    #    unsigned char status;
    #    unsigned char players;
    #    unsigned char rumble;
    #    unsigned char transferpak;
    #    unsigned char mempak;
    #    unsigned char biopak;

    #ctypedef enum m64p_dbg_state:
    #    M64P_DBG_RUN_STATE = 1,
    #    M64P_DBG_PREVIOUS_PC,
    #    M64P_DBG_NUM_BREAKPOINTS,
    #    M64P_DBG_CPU_DYNACORE,
    #    M64P_DBG_CPU_NEXT_INTERRUPT

    #ctypedef enum m64p_dbg_runstate:
    #    M64P_DBG_RUNSTATE_PAUSED = 0,
    #    M64P_DBG_RUNSTATE_STEPPING,
    #    M64P_DBG_RUNSTATE_RUNNING

    #ctypedef enum m64p_dbg_mem_info:
    #    M64P_DBG_MEM_TYPE = 1,
    #    M64P_DBG_MEM_FLAGS,
    #    M64P_DBG_MEM_HAS_RECOMPILED,
    #    M64P_DBG_MEM_NUM_RECOMPILED,
    #    M64P_DBG_RECOMP_OPCODE = 16,
    #    M64P_DBG_RECOMP_ARGS,
    #    M64P_DBG_RECOMP_ADDR

    #ctypedef enum m64p_dbg_mem_type:
    #    M64P_MEM_NOMEM = 0,
    #    M64P_MEM_NOTHING,
    #    M64P_MEM_RDRAM,
    #    M64P_MEM_RDRAMREG,
    #    M64P_MEM_RSPMEM,
    #    M64P_MEM_RSPREG,
    #    M64P_MEM_RSP,
    #    M64P_MEM_DP,
    #    M64P_MEM_DPS,
    #    M64P_MEM_VI,
    #    M64P_MEM_AI,
    #    M64P_MEM_PI,
    #    M64P_MEM_RI,
    #    M64P_MEM_SI,
    #    M64P_MEM_FLASHRAMSTAT,
    #    M64P_MEM_ROM,
    #    M64P_MEM_PIF,
    #    M64P_MEM_MI,
    #    M64P_MEM_BREAKPOINT

    #ctypedef enum m64p_dbg_mem_flags:
    #    M64P_MEM_FLAG_READABLE = 0x01,
    #    M64P_MEM_FLAG_WRITABLE = 0x02,
    #    M64P_MEM_FLAG_READABLE_EMUONLY = 0x04,
    #    M64P_MEM_FLAG_WRITABLE_EMUONLY = 0x08

    #ctypedef enum m64p_dbg_memptr_type:
    #    M64P_DBG_PTR_RDRAM = 1,
    #    M64P_DBG_PTR_PI_REG,
    #    M64P_DBG_PTR_SI_REG,
    #    M64P_DBG_PTR_VI_REG,
    #    M64P_DBG_PTR_RI_REG,
    #    M64P_DBG_PTR_AI_REG

    #ctypedef enum m64p_dbg_cpu_data:
    #    M64P_CPU_PC = 1,
    #    M64P_CPU_REG_REG,
    #    M64P_CPU_REG_HI,
    #    M64P_CPU_REG_LO,
    #    M64P_CPU_REG_COP0,
    #    M64P_CPU_REG_COP1_DOUBLE_PTR,
    #    M64P_CPU_REG_COP1_SIMPLE_PTR,
    #    M64P_CPU_REG_COP1_FGR_64,
    #    M64P_CPU_TLB

    #ctypedef enum m64p_dbg_bkp_command:
    #    M64P_BKP_CMD_ADD_ADDR = 1,
    #    M64P_BKP_CMD_ADD_STRUCT,
    #    M64P_BKP_CMD_REPLACE,
    #    M64P_BKP_CMD_REMOVE_ADDR,
    #    M64P_BKP_CMD_REMOVE_IDX,
    #    M64P_BKP_CMD_ENABLE,
    #    M64P_BKP_CMD_DISABLE,
    #    M64P_BKP_CMD_CHECK

    #ctypedef enum m64p_dbg_bkp_flags:
    #    M64P_BKP_FLAG_ENABLED = 0x01,
    #    M64P_BKP_FLAG_READ = 0x02,
    #    M64P_BKP_FLAG_WRITE = 0x04,
    #    M64P_BKP_FLAG_EXEC = 0x08,
    #    M64P_BKP_FLAG_LOG = 0x10

    #ctypedef struct m64p_breakpoint:
    #    uint32_t address;
    #    uint32_t endaddr;
    #    unsigned int flags;

    #ctypedef struct m64p_2d_size:
    #    unsigned int uiWidth;
    #    unsigned int uiHeight;

    #ctypedef enum m64p_GLattr:
    #    M64P_GL_DOUBLEBUFFER = 1,
    #    M64P_GL_BUFFER_SIZE,
    #    M64P_GL_DEPTH_SIZE,
    #    M64P_GL_RED_SIZE,
    #    M64P_GL_GREEN_SIZE,
    #    M64P_GL_BLUE_SIZE,
    #    M64P_GL_ALPHA_SIZE,
    #    M64P_GL_SWAP_CONTROL,
    #    M64P_GL_MULTISAMPLEBUFFERS,
    #    M64P_GL_MULTISAMPLESAMPLES,
    #    M64P_GL_CONTEXT_MAJOR_VERSION,
    #    M64P_GL_CONTEXT_MINOR_VERSION,
    #    M64P_GL_CONTEXT_PROFILE_MASK

    #ctypedef enum m64p_GLContextType:
    #    M64P_GL_CONTEXT_PROFILE_CORE,
    #    M64P_GL_CONTEXT_PROFILE_COMPATIBILITY,
    #    M64P_GL_CONTEXT_PROFILE_ES

    #ctypedef struct m64p_video_extension_functions:
    #    unsigned int Functions;
    #    m64p_error (*VidExtFuncInit)();
    #    m64p_error (*VidExtFuncQuit)();
    #    m64p_error (*VidExtFuncListModes)(m64p_2d_size *, int *);
    #    m64p_error (*VidExtFuncSetMode)(int, int, int, int, int);
    #    m64p_function (*VidExtFuncGLGetProc)(const char*);
    #    m64p_error (*VidExtFuncGLSetAttr)(m64p_GLattr, int);
    #    m64p_error (*VidExtFuncGLGetAttr)(m64p_GLattr, int *);
    #    m64p_error (*VidExtFuncGLSwapBuf)();
    #    m64p_error (*VidExtFuncSetCaption)(const char *);
    #    m64p_error (*VidExtFuncToggleFS)();
    #    m64p_error (*VidExtFuncResizeWindow)(int, int);
    #    uint32_t (*VidExtFuncGLGetDefaultFramebuffer)();

    #ctypedef m64p_error (*ptr_PluginGetVersion)(m64p_plugin_type *, int *, int *, const char **, int *);
    m64p_error PluginGetVersion(m64p_plugin_type *, int *, int *, const char **, int *)

    #ctypedef m64p_error (*ptr_CoreGetAPIVersions)(int *, int *, int *, int *);
    #m64p_error CoreGetAPIVersions(int *, int *, int *, int *);

    #ctypedef const char * (*ptr_CoreErrorMessage)(m64p_error);
    #const char * CoreErrorMessage(m64p_error);

    #ctypedef m64p_error (*ptr_PluginStartup)(m64p_dynlib_handle, void *, void (*)(void *, int, const char *));
    #m64p_error PluginStartup(m64p_dynlib_handle, void *, void (*)(void *, int, const char *));

    #ctypedef m64p_error (*ptr_PluginShutdown)();
    #m64p_error PluginShutdown();

    #ctypedef m64p_error (*ptr_DebugSetCallbacks)(void (*)(), void (*)(unsigned int), void (*)());
    #m64p_error DebugSetCallbacks(void (*)(), void (*)(unsigned int), void (*)());

    #ctypedef m64p_error (*ptr_DebugSetCoreCompare)(void (*)(unsigned int), void (*)(int, void *));
    #m64p_error DebugSetCoreCompare(void (*)(unsigned int), void (*)(int, void *));

    #ctypedef m64p_error (*ptr_DebugSetRunState)(m64p_dbg_runstate);
    #m64p_error DebugSetRunState(m64p_dbg_runstate);

    #ctypedef int (*ptr_DebugGetState)(m64p_dbg_state);
    #int DebugGetState(m64p_dbg_state);

    #ctypedef m64p_error (*ptr_DebugStep)();
    #m64p_error DebugStep();

    #ctypedef void (*ptr_DebugDecodeOp)(unsigned int, char *, char *, int);
    #void DebugDecodeOp(unsigned int, char *, char *, int);

    #ctypedef void * (*ptr_DebugMemGetRecompInfo)(m64p_dbg_mem_info, unsigned int, int);
    #void * DebugMemGetRecompInfo(m64p_dbg_mem_info, unsigned int, int);

    #ctypedef int (*ptr_DebugMemGetMemInfo)(m64p_dbg_mem_info, unsigned int);
    #int DebugMemGetMemInfo(m64p_dbg_mem_info, unsigned int);

    #ctypedef void * (*ptr_DebugMemGetPointer)(m64p_dbg_memptr_type);
    #void * DebugMemGetPointer(m64p_dbg_memptr_type);
